[project]
name = "traffic-openenv"
version = "0.1.0"
description = "Traffic signal optimization environment"
authors = [{ name = "Nithin" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:main"