[project]
name = "traffic-openenv"
version = "0.2.0"
description = "Seedable traffic signal optimization OpenEnv with adaptive benchmarks"
authors = [{ name = "Nithin" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0",
    "openai"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:main"
